--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <script type="text/javascript">
       // Simular la variable de entorno $HOME
-      const homeDir = "/home/adriano"; // Ajusta este valor según tu sistema
+      const homeDir = "/home/dushessss"; // Ajusta este valor según tu sistema
 
       // Inserción dinámica de CSS
       const dynamicStyle = document.getElementById('dynamic-style');
